# flux-helmfile-controller

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yaml  test.yaml
demo/: README.md  age.agekey  helmfile.yaml  repo.yaml  secrets1.enc.yaml  secrets2.enc.yaml
demo/demo/: Chart.yaml
demo/demo/templates/: secret.yaml
manifests/: crd.yaml  deployment.yaml  rbac.yaml
src/: api.rs  controller.rs  crd.rs  devhelper.rs  error.rs  helmfile.rs  k8sclient.rs  main.rs  metrics.rs  reconciler.rs  store.rs  util.rs
src/extcrds/: gitrepositories.rs
src/flux/: artifact.rs
